--- a/filmfest.html
+++ b/filmfest.html
@@ -5,30 +5,43 @@
   <meta charset="utf-8">
   <!-- CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
+<link rel="stylesheet" href="css/style.css">
 <!-- jQuery and JS bundle w/ Popper.js -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Outdoor Film Festival</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Repertoire</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">How to get to</a>
-      </li>
-    </ul>
+    <a class="navbar-brand" href="#">Outdoor Film Festival</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">What's on the repertoire</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">How to get to</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+<div class="container">
+  <img src="img/map.jpg" alt="Boston map art minimalistic" class="image">
+  <div class="overlay">
+    <div class="text">Welcome to the city of movies!</div>
   </div>
-</nav>
+</div>
+<div class="container">
+  <img src="img/qm.png" alt="question mark" class="image">
+  <div class="overlay">
+    <div class="text"><a href="repertoire.html">See what's on the repertoire</a></div>
+  </div>
+</div>
 </body>
 </html>
