--- a/filmfest.html
+++ b/filmfest.html
@@ -17,15 +17,15 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="filmfest.html">HOME</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">What's on the repertoire</a>
+          <a class="nav-link" href="repertoire.html">WHAT'S ON THE REPERTOIRE?</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">How to get to</a>
+          <a class="nav-link" href="location.html">NAVIGATE TO</a>
         </li>
       </ul>
     </div>
@@ -34,11 +34,11 @@
 <div class="container">
   <img src="img/map.jpg" alt="Boston map art minimalistic" class="image">
   <div class="overlay">
-    <div class="text">Welcome to the city of movies!</div>
+    <div class="text"><a href="location.html">Welcome to the city of movies!</a></div>
   </div>
 </div>
 <div class="container">
-  <img src="img/qm.png" alt="question mark" class="image">
+  <img src="img/qm2.png" alt="question mark" class="image">
   <div class="overlay">
     <div class="text"><a href="repertoire.html">See what's on the repertoire</a></div>
   </div>
