--- a/repertoire.html
+++ b/repertoire.html
@@ -33,7 +33,7 @@
   <div class="card-deck">
 <div class="card">
   <div class="video-wrapper">
-  	<iframe width="348px" height="240px" src="https://www.youtube.com/watch?v=wZdpNglLbt8" frameborder="0" allowfullscreen></iframe>
+  	<iframe src="https://www.youtube.com/watch?v=wZdpNglLbt8" frameborder="0" allowfullscreen></iframe>
   </div>
   <div class="card-body">
     <h5 class="card-title">Finding Nemo</h5>
@@ -44,23 +44,27 @@
   </div>
 </div>
 <div class="card">
-  <img class="card-img-top" src="..." alt="Card image cap">
+  <div class="video-wrapper">
+    <iframe src="https://www.youtube.com/watch?v=s7EdQ4FqbhY" frameborder="0" allowfullscreen></iframe>
+  </div>
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+    <h5 class="card-title">Pulp Fiction</h5>
+    <p class="card-text">The lives of two mob hitmen, a boxer, a gangster and his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.</p>
   </div>
   <div class="card-footer">
-    <small class="text-muted">Last updated 3 mins ago</small>
+    <small class="text-muted">11/12/2020 8:30PM</small>
   </div>
 </div>
 <div class="card">
-  <img class="card-img-top" src="..." alt="Card image cap">
+  <div class="video-wrapper">
+    <iframe src="https://www.youtube.com/watch?v=vN-1Mup0UI0" frameborder="0" allowfullscreen></iframe>
+  </div>
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+    <h5 class="card-title">A Clockwork Orange</h5>
+    <p class="card-text">In the future, a sadistic gang leader is imprisoned and volunteers for a conduct-aversion experiment, but it doesn't go as planned.</p>
   </div>
   <div class="card-footer">
-    <small class="text-muted">Last updated 3 mins ago</small>
+    <small class="text-muted">11/13/2020 8:00PM</small>
   </div>
 </div>
 </div>
