repertoar gotov i lokacija

--- a/location.html
+++ b/location.html
@@ -30,5 +30,8 @@
       </ul>
     </div>
   </nav>
+<div id="map-container" class="z-depth-1-half map-container" style="height: 50%">
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2948.4536004930524!2d-71.07261658428959!3d42.354171443465574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e3709e822b60bb%3A0xcbd77f0b5e16e701!2sBoston%20Public%20Garden!5e0!3m2!1sen!2srs!4v1605114840375!5m2!1sen!2srs" width="800" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+</div>
 </body>
 </html>
