--- a/repertoire.html
+++ b/repertoire.html
@@ -33,11 +33,11 @@
   <div class="card-deck">
 <div class="card">
   <div class="video-wrapper">
-  	<iframe src="https://www.youtube.com/watch?v=wZdpNglLbt8" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/8m662obIvhY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="card-body">
-    <h5 class="card-title">Finding Nemo</h5>
-    <p class="card-text">After his son is captured in the Great Barrier Reef and taken to Sydney, a timid clownfish sets out on a journey to bring him home.</p>
+    <h5 class="card-title">Fear and Loathing in Las Vegas</h5>
+    <p class="card-text">An oddball journalist and his psychopathic lawyer travel to Las Vegas for a series of psychedelic escapades.</p>
   </div>
   <div class="card-footer">
     <small class="text-muted">11/11/2020 8:00PM</small>
@@ -45,7 +45,7 @@
 </div>
 <div class="card">
   <div class="video-wrapper">
-    <iframe src="https://www.youtube.com/watch?v=s7EdQ4FqbhY" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/s7EdQ4FqbhY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="card-body">
     <h5 class="card-title">Pulp Fiction</h5>
@@ -57,7 +57,7 @@
 </div>
 <div class="card">
   <div class="video-wrapper">
-    <iframe src="https://www.youtube.com/watch?v=vN-1Mup0UI0" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/vN-1Mup0UI0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="card-body">
     <h5 class="card-title">A Clockwork Orange</h5>
