--- a/repertoire.html
+++ b/repertoire.html
@@ -33,7 +33,7 @@
   <div class="card-deck">
 <div class="card">
   <div class="video-wrapper">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/8m662obIvhY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8m662obIvhY" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="card-body">
     <h5 class="card-title">Fear and Loathing in Las Vegas</h5>
@@ -45,7 +45,7 @@
 </div>
 <div class="card">
   <div class="video-wrapper">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/s7EdQ4FqbhY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/s7EdQ4FqbhY" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="card-body">
     <h5 class="card-title">Pulp Fiction</h5>
@@ -57,7 +57,7 @@
 </div>
 <div class="card">
   <div class="video-wrapper">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/vN-1Mup0UI0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vN-1Mup0UI0" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="card-body">
     <h5 class="card-title">A Clockwork Orange</h5>
